# SafeAutoCorePlatform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
CMake/CMakeConfig/: clang21_linux_aarch64_debug.cmake  clang21_linux_aarch64_release.cmake  clang21_linux_x86_64_debug.cmake  clang21_linux_x86_64_release.cmake  gcc11_linux_aarch64_debug.cmake  gcc11_linux_aarch64_release.cmake  gcc11_linux_x86_64_debug.cmake  gcc11_linux_x86_64_release.cmake  gcc13_linux_aarch64_debug.cmake  gcc13_linux_aarch64_release.cmake  gcc13_linux_x86_64_debug.cmake  gcc13_linux_x86_64_release.cmake  qcc12_qnx800_aarch64_debug.cmake  qcc12_qnx800_aarch64_release.cmake  qcc12_qnx800_x86_64_debug.cmake  qcc12_qnx800_x86_64_release.cmake  qcc8_qnx710_aarch64_debug.cmake  qcc8_qnx710_aarch64_release.cmake  qcc8_qnx710_x86_64_debug.cmake  qcc8_qnx710_x86_64_release.cmake
CMake/Toolchain/: clang20_linux_aarch64.cmake  clang20_linux_x86_64.cmake  clang21_linux_aarch64.cmake  clang21_linux_x86_64.cmake  gcc11_linux_aarch64.cmake  gcc11_linux_x86_64.cmake  gcc13_linux_aarch64.cmake  gcc13_linux_x86_64.cmake  qcc12_qnx800_aarch64.cmake  qcc12_qnx800_x86_64.cmake  qcc8_qnx710_aarch64.cmake  qcc8_qnx710_x86_64.cmake
CMake/Toolchain/CMakeLogging/: tool_chain_log_config.cmake
components/open-aa-example-apps/demo/app/src/: main.cpp
components/open-aa-example-apps/demo/app/src/demo/manager/: demo_manager.cpp
components/open-aa-platform-os-abstraction-libs/include/ara/os/interface/process/: process_factory.h  process_interaction.h
components/open-aa-platform-os-abstraction-libs/include/ara/os/linux/process/: process.h
components/open-aa-platform-os-abstraction-libs/include/ara/os/qnx/process/: process.h
components/open-aa-platform-os-abstraction-libs/src/ara/os/interface/process/: CMakeLists.txt  process_factory.cpp  process_interaction.cpp
components/open-aa-platform-os-abstraction-libs/src/ara/os/linux/process/: process.cpp
components/open-aa-platform-os-abstraction-libs/src/ara/os/qnx/process/: process.cpp
components/open-aa-std-adaptive-autosar-libs/: CMakeLists.txt
components/open-aa-std-adaptive-autosar-libs/include/ara/core/: abort.h  algorithm.h  array.h  byte.h  iterator.h  memory.h  ranges.h  span.h  string_view.h
components/open-aa-std-adaptive-autosar-libs/include/ara/core/internal/: location_utils.h  unsafe_operation.h  utility.h  violation_handler.h  xxh3_minimal.h
components/open-aa-std-adaptive-autosar-libs/include/ara/core/internal/algorithm/: array.h  compare.h  tuple.h
components/open-aa-std-adaptive-autosar-libs/include/ara/core/internal/storage/: array_storage.h  span_storage.h
components/open-aa-std-adaptive-autosar-libs/src/ara/core/internal/: violation_handler.cpp
open-aa-tests/core_platform/: CMakeLists.txt
open-aa-tests/core_platform/c_compiler_linker_options/: CMakeLists.txt  main.c
open-aa-tests/core_platform/core_abort_test/: CMakeLists.txt  ara_core_abort.cpp  main.cpp
open-aa-tests/core_platform/core_array_test/: CMakeLists.txt  ara_core_array.cpp
open-aa-tests/core_platform/core_byte_test/: CMakeLists.txt  ara_core_byte.cpp
open-aa-tests/core_platform/core_memory_test/: CMakeLists.txt  ara_core_memory_test.cpp  test_unsafe_wrapper.h  test_utilities.h
open-aa-tests/core_platform/core_span_test/: CMakeLists.txt  ara_core_span.cpp
open-aa-tests/core_platform/core_string_view_test/: CMakeLists.txt  ara_core_string_view.cpp
tests/core_platform/: CMakeLists.txt  ara_core_array.cpp
