#[======================================================================
# OpenAA: Open Source Adaptive AUTOSAR Project
# Author: Sherif Mohamed
#
# File description:
# -----------------
# CMake configuration for the src directory of open-aa-tests.
# Adds subdirectories for interface and platform-specific implementations.
#]=======================================================================]

#****************************************************************************************************
# Subdirectory Inclusion
#****************************************************************************************************

add_subdirectory(core_array_test)

add_subdirectory(core_abort_test)