#[=======================================================================[
OpenAA: Open Source Adaptive AUTOSAR Project (C_STANDARD 11)
Author: Sherif Mohamed

File description:
-----------------
CMake configuration for the core_platform tests.
#]=======================================================================]

#****************************************************************************************************
# Test Executable Definition
#****************************************************************************************************
add_executable(posix_c
    main.c
)

#****************************************************************************************************
# Installation Configuration
#****************************************************************************************************
install(TARGETS posix_c
    DESTINATION platform_core_test/posix_c/bin
)
