#[=======================================================================[
Author: Sherif Mohamed

File description:
-----------------
CMake configuration for the core_platform tests.
#]=======================================================================]

#****************************************************************************************************
# Test Executable Definition
#****************************************************************************************************
add_executable(core_memory_test
    ara_core_memory_test.cpp
)

#****************************************************************************************************
# Linking Configuration
#****************************************************************************************************
target_link_libraries(core_memory_test
    PRIVATE
    ara::core::span
)

#****************************************************************************************************
# Installation Configuration
#****************************************************************************************************
install(TARGETS core_memory_test
    DESTINATION platform_core_test/core_memory_test/bin
)

#****************************************************************************************************
# Testing Configuration
#****************************************************************************************************
enable_testing()
add_test(NAME AraCoreMemoryTest
    COMMAND ara_core_memory_test
)